Intro component now conditionally renders the Questions when Button Start quiz is clicked. State of choices are passed into Question component.

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@
     margin: 0 auto 0 auto;
 }
 
+.container {
+    max-width: 1100px;
+    margin: 25px auto 25px auto;
+}
 
 .question__container {
     width: 60%;
