--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,14 @@
     color: #D6DBF5;
     background-color: #4D5B9E;
     border-radius: 7px;
-    margin: 0 auto 0 auto;
+}
+
+.btn-selected {
+    border: 1px solid #D6DBF5;
+    border-radius: 7px;
+    background-color: #D6DBF5;
+    color: #4D5B9E;
+    padding: 10px 20px;
 }
 
 .container {
