--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,23 @@
     padding: 10px 20px;
 }
 
+.btn-correct {
+    border-radius: 7px;
+    border: 1px solid #94D7A2;
+    background-color: #94D7A2;
+    color: #4D5B9E;
+    padding: 10px 20px;
+}
+
+.btn-incorrect {
+    border-radius: 7px;
+    border: 1px solid #F8BCBC;
+    background-color: #F8BCBC;
+    color: #4D5B9E;
+    padding: 10px 20px;
+}
+
+
 .container {
     max-width: 1100px;
     margin: 25px auto 25px auto;
